scrollbar and making first step to prevent dissapearing cart when product added

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,7 +25,7 @@ $weight) {
 }
 
 body::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 
 body::-webkit-scrollbar-track {
@@ -1300,19 +1300,20 @@ body {
     width: 262px;
     border: 0px solid;
     position: fixed;
-    overflow-y: scroll;
+    overflow-y: auto;
     top: 75px;
     // right: 75px;
+    border-right: 20px transparent;
     @include font-change(#777777,
     16px,
     400);
     border-radius: 5px;
     background-color: #ffffff;
     width: 262px;
-    height: 70%;
+    max-height: 70%;
     padding: 16px;
     &::-webkit-scrollbar {
-      width: 5px;
+      width: 10px;
     }
     &::-webkit-scrollbar-track {
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -1423,6 +1424,9 @@ body {
     16px,
     700);
     font-family: Lato;
+    // width: 50%;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
